--- a/style.css
+++ b/style.css
@@ -362,6 +362,28 @@ body {
     height: 180px;
 }
 
+.item-image::before {
+    content: "";
+    position: absolute;
+    /* top: 90px; */
+    /* left: -25px; */
+    width: 320px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.5);
+    transform: rotate(34deg);
+}
+
+.item-image::after {
+    content: "";
+    position: absolute;
+    /* top: 90px; */
+    /* left: -25px; */
+    width: 320px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.5);
+    transform: rotate(-34deg);
+}
+
 .item-content {
     background-color: rgba(44, 113, 184, 0.75);
     padding-left: 15px;
@@ -505,6 +527,7 @@ body {
 
 .btn-load-more:hover {
     background-color: rgba(255, 255, 255, 0.2);
+    text-decoration: underline;
     /* border: 1px solid #fff; */
 }
 
