--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ body {
     max-width: 50%;
 }
 
+.col-8 {
+    flex:0 0 66.66667%;
+    max-width: 66.66667%;
+}
+
 .col-9 {
     flex:0 0 75%;
     max-width: 75%;
@@ -239,18 +244,107 @@ body {
 }
 
 .goods-search {
-    display: flex;
-    justify-content: space-between;
-    margin-left: -15px;
-    margin-right: -15px;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* margin-left: -15px;
+    margin-right: -15px; */
 }
 
 .filter {
-    height: 850px;
+    /* height: 850px; */
     background-color: rgba(255, 255, 255, 0.2);
     border-right: 1px solid #fff;
-    flex-basis: calc(25% - 30px);
-    margin-left: 15px;
+    /* flex-basis: calc(25% - 30px);
+    margin-left: 15px; */
+    padding: 30px;
+    color: #fff;
+    font-size: 21px;
+    font-weight: 300;
+}
+
+.filter-feature{
+    margin-bottom: 60px;
+}
+
+.filter .filter-feature:nth-child(3) {
+    margin-bottom: 30px;
+}
+
+.filter-name {
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.filter-options input[type="checkbox"] {
+    display: none;
+}
+
+.filter-options div {
+    margin-bottom: 20px;
+}
+
+.filter-options label::before {
+    content: "";
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #fff;
+    margin-right: 10px;
+}
+
+.filter-options input[type="checkbox"]:checked + label::before {
+    background-color: #fff;
+}
+
+.filter-options input[type="checkbox"]:checked + label {
+    font-weight: 400;
+}
+
+.filter-options label:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    font-weight: 400;
+}
+
+.filter [class*="btn-"] {
+    width: 100%;
+    font-size: 21px;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    cursor: pointer;
+    /* margin-bottom: 30px; */
+}
+
+.btn-more-filters {
+    background: none;
+    border: none;
+    font-weight: 300;
+    margin-bottom: 30px;
+    word-spacing: -1px;
+}
+
+.btn-more-filters:hover, .btn-more-filters:active {
+    text-decoration: underline;
+}
+
+.btn-more-filters:active {
+    font-weight: 400;
+}
+
+.btn-submit-filters {
+    height: 50px;
+    font-weight: bold;
+    border: 1px solid #fff;
+    background-color: rgba(44, 113, 184, 1);
+}
+
+.btn-submit-filters:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.btn-submit-filters:active {
+    border: 1px solid #2c71b8;
 }
 
 .goods {
@@ -283,8 +377,8 @@ body {
 }
 
 .category-head {
-    display: flex;
-    justify-content: space-between;
+    /* display: flex; */
+    /* justify-content: space-between; */
     align-items: center;
 }
 
@@ -298,12 +392,15 @@ body {
     background-color: #2c71b8;
     border: 1px solid #fff;
     height: 40px;
-    width: 270px;
+    /* width: 270px; */
     position: relative;
     background-image: url(img/arrow-down-icon.png);
     background-repeat: no-repeat;
     background-position: 98% 50%;
     background-size: 25px ;
+    /* flex-basis: calc(33.33333% - 30px);
+    margin-right: 15px;
+    padding-left: 0px; */
 }
 
 .sorting a {
@@ -340,17 +437,18 @@ body {
 }
 
 .goods-list > ul {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
     justify-content: space-between;
-    gap: 30px;
+    /* gap: 30px; */
 
 }
 
 .goods-item {
     border: 1px solid #fff;
-    width: 270px;
+    /* width: 270px; */
     position: relative;
+    margin-bottom: 30px;
 }
 
 .item-image {
@@ -360,13 +458,14 @@ body {
     background-color: rgba(255, 255, 255, 0.75);
     width: 100%;
     height: 180px;
+    border-bottom: 1px solid #fff;
 }
 
-.item-image::before {
+/* .item-image::before {
     content: "";
     position: absolute;
-    /* top: 90px; */
-    /* left: -25px; */
+    top: 90px;
+    left: -25px;
     width: 320px;
     height: 1px;
     background: rgba(255, 255, 255, 0.5);
@@ -376,13 +475,13 @@ body {
 .item-image::after {
     content: "";
     position: absolute;
-    /* top: 90px; */
-    /* left: -25px; */
+    top: 90px;
+    left: -25px;
     width: 320px;
     height: 1px;
     background: rgba(255, 255, 255, 0.5);
     transform: rotate(-34deg);
-}
+} */
 
 .item-content {
     background-color: rgba(44, 113, 184, 0.75);
@@ -526,7 +625,7 @@ body {
 }
 
 .btn-load-more:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+    /* background-color: rgba(255, 255, 255, 0.2); */
     text-decoration: underline;
     /* border: 1px solid #fff; */
 }
@@ -534,4 +633,9 @@ body {
 .footer {
     height: 100px;
     background-color: rgba(255, 255, 255, 0.75);
+    color: #2c71b8;
+    font-size: 21px;
+    line-height: 100px;
+    text-align: center;
+    font-weight: 300;
 }
