--- a/style.css
+++ b/style.css
@@ -243,12 +243,12 @@ body {
     border-top: 1px solid #fff;
 }
 
-.goods-search {
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* margin-left: -15px;
-    margin-right: -15px; */
-}
+/* .goods-search {
+    display: flex;
+    justify-content: space-between;
+    margin-left: -15px;
+    margin-right: -15px;
+} */
 
 .filter {
     /* height: 850px; */
@@ -290,6 +290,7 @@ body {
     height: 10px;
     border: 1px solid #fff;
     margin-right: 10px;
+    transform: translateY(-1px);
 }
 
 .filter-options input[type="checkbox"]:checked + label::before {
