--- a/style.css
+++ b/style.css
@@ -212,8 +212,8 @@ body {
 }
 
 .cart-content::before{
-    content: "4";
-    display: inline-block;
+    content: attr(counter);
+    display: none;
     text-decoration: none;
     font-size: 12px;
     color: white;
