--- a/style.css
+++ b/style.css
@@ -612,16 +612,21 @@ body {
     background-image: url(img/heart-blue-icon.png);
 }
 
-.btn-focus:hover, .btn-focus:focus {
+.btn-focus:hover, 
+.btn-focus:focus {
     background-image: url(img/focus-white-icon.png);
 }
 
-.status-buttons [class*="btn-"]:hover, /*.status-buttons [class*="btn-"]:focus,*/ .status-buttons .btn-like-active {
+.status-buttons [class*="btn-"]:hover, 
+/*.status-buttons [class*="btn-"]:focus,*/ 
+.status-buttons .btn-like-active {
     cursor: pointer;
     background-color: #2c71b8;
 }
 
-.btn-like:hover, /*.btn-like:focus,*/ .status-buttons .btn-like-active {
+.btn-like:hover, 
+/*.btn-like:focus,*/ 
+.status-buttons .btn-like-active {
     background-image: url(img/heart-white-icon.png);
 }
 
@@ -702,4 +707,78 @@ body {
 
 .hide{
     display: none;
+}
+
+
+.slider-content > div {
+    font-size: 100px;
+    font-weight: 100;
+    text-align: center;
+    letter-spacing: 0.15em;
+    color: white;
+    padding: 150px 0;
+}
+.slick-dotted.slick-slider {
+    margin-bottom: 0px;
+}
+
+.slick-prev,
+.slick-next {
+    width: 25px;
+    height: 50px;
+    z-index: 10;
+}
+.slick-prev {
+    left: 0;
+}
+.slick-next {
+    right: 0;
+}
+.slick-prev:before,
+.slick-next:before {
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-size: 0px;
+    line-height: 1;
+    opacity: 1;
+}
+.slick-prev:before {
+    background: center / 100% no-repeat url(img/arrow-back-slider.png);
+}
+.slick-next:before{
+    background: center / 100% no-repeat url(img/arrow-forward-slider.png);
+}
+
+.slick-dots {
+    bottom: 30px;
+}
+
+.slick-dots li {
+    width: 10px;
+    height: 10px;
+    margin: 0 10px;
+    padding: 0;
+}
+
+.slick-dots li button {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    border: 1px solid white;
+}
+
+.slick-dots li button:before {
+    content: none;
+}
+
+.slick-dots li.slick-active button {
+    opacity: 1;
+    background-color: white;
+}
+
+
+.slick-dots li button:hover,
+.slick-dots li button:focus {
+    background-color: white;
 }
