--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-image: url(img/patt.png);
 }
 
@@ -26,40 +26,40 @@ body {
 }
 
 .col-1 {
-    flex:0 0 8.33333%;
+    flex: 0 0 8.33333%;
     max-width: 8.33333%;
 }
 .col-2 {
-    flex:0 0 16.66667%;
+    flex: 0 0 16.66667%;
     max-width: 16.66667%;
 }
 .col-3 {
-    flex:0 0 25%;
+    flex: 0 0 25%;
     max-width: 25%;
 }
 
 .col-4 {
-    flex:0 0 33.33333%;
+    flex: 0 0 33.33333%;
     max-width: 33.33333%;
 }
 
 .col-6 {
-    flex:0 0 50%;
+    flex: 0 0 50%;
     max-width: 50%;
 }
 
 .col-8 {
-    flex:0 0 66.66667%;
+    flex: 0 0 66.66667%;
     max-width: 66.66667%;
 }
 
 .col-9 {
-    flex:0 0 75%;
+    flex: 0 0 75%;
     max-width: 75%;
 }
 
 .col-12 {
-    flex:0 0 100%;
+    flex: 0 0 100%;
     max-width: 100%;
 }
 
@@ -70,7 +70,7 @@ body {
     background-color: rgba(255, 255, 255, 0.75);
 }
 
-.logo{
+.logo {
     transform: translateY(10px);
 }
 
@@ -78,7 +78,7 @@ body {
     display: flex;
 }
 
-.menu>li {
+.menu > li {
     width: 25%;
     border-left: 1px solid #2c71b8;
     position: relative;
@@ -98,12 +98,12 @@ body {
     font-size: 21px;
 }
 
-.menu>li:hover >a{
+.menu > li:hover > a {
     background-color: #2c71b8;
     color: white;
 }
 
-.menu li:hover .menu-products{
+.menu li:hover .menu-products {
     display: block;
 }
 
@@ -121,7 +121,7 @@ body {
 }
 
 .menu li:hover .down-arrow {
-    border-color:  white;
+    border-color: white;
 }
 
 .menu-products {
@@ -167,8 +167,8 @@ body {
     flex-grow: 2;
     height: 40px;
     border: 1px solid rgb(44, 113, 184);
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     justify-content: flex-end;
 }
 
@@ -178,10 +178,10 @@ body {
     padding-left: 20px;
     border: none;
     background: none;
-    flex-grow:2;
+    flex-grow: 2;
 }
 
-.search input:focus  {
+.search input:focus {
     outline: none;
     background: none;
     color: rgb(44, 113, 184);
@@ -193,14 +193,14 @@ body {
 }
 
 .search button {
-    border:none;
-    background:rgb(44, 113, 184);
+    border: none;
+    background: rgb(44, 113, 184);
     margin: 5px;
 }
-.search button:hover{
+.search button:hover {
     cursor: pointer;
 }
-.cart>a{
+.cart > a {
     position: relative;
 }
 .cart-content {
@@ -212,7 +212,7 @@ body {
     background-position: center;
     position: relative;
 }
-.cart-counter{
+.cart-counter {
     text-decoration: none;
     font-size: 12px;
     color: white;
@@ -279,7 +279,7 @@ body {
     font-weight: 300;
 }
 
-.filter-feature{
+.filter-feature {
     margin-bottom: 60px;
 }
 
@@ -328,7 +328,7 @@ body {
     width: 100%;
     font-size: 21px;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     text-align: center;
     cursor: pointer;
     /* margin-bottom: 30px; */
@@ -342,7 +342,8 @@ body {
     word-spacing: -1px;
 }
 
-.btn-more-filters:hover, .btn-more-filters:active {
+.btn-more-filters:hover,
+.btn-more-filters:active {
     text-decoration: underline;
 }
 
@@ -391,7 +392,7 @@ body {
 }
 
 .category-way a:hover {
-    color: #fff
+    color: #fff;
 }
 
 .category-head {
@@ -415,7 +416,7 @@ body {
     background-image: url(img/arrow-down-icon.png);
     background-repeat: no-repeat;
     background-position: 98% 50%;
-    background-size: 25px ;
+    background-size: 25px;
     /* flex-basis: calc(33.33333% - 30px);
     margin-right: 15px;
     padding-left: 0px; */
@@ -440,11 +441,11 @@ body {
     top: 38px;
 }
 
-.sorting:hover ul{
+.sorting:hover ul {
     display: block;
 }
 
-.sorting li:hover a{
+.sorting li:hover a {
     color: #2c71b8;
     background-color: #fff;
 }
@@ -459,7 +460,6 @@ body {
     /* flex-wrap: wrap; */
     justify-content: space-between;
     /* gap: 30px; */
-
 }
 
 .goods-item {
@@ -528,7 +528,8 @@ body {
     text-decoration: underline;
 }
 
-.item-dscrptn, [class*="item-char"] {
+.item-dscrptn,
+[class*="item-char"] {
     font-size: 21px;
     font-weight: 300;
     margin-bottom: 20px;
@@ -546,7 +547,7 @@ body {
     margin-bottom: 25px;
 }
 
-.item-cost sup{
+.item-cost sup {
     vertical-align: super;
     font-size: 28px;
 }
@@ -555,7 +556,7 @@ body {
     text-align: center;
 }
 
-.item-action button{
+.item-action button {
     width: 210px;
     height: 50px;
     border: 1px solid #fff;
@@ -563,7 +564,7 @@ body {
     font-weight: bold;
     line-height: 50px;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 .item-action button:hover {
@@ -600,7 +601,6 @@ body {
     background: none;
     background-repeat: no-repeat;
     background-position: center;
-    
 }
 
 .status-buttons .btn-focus {
@@ -612,7 +612,7 @@ body {
     background-image: url(img/heart-blue-icon.png);
 }
 
-.btn-focus:hover, 
+.btn-focus:hover,
 .btn-focus:focus {
     background-image: url(img/focus-white-icon.png);
 }
@@ -639,7 +639,7 @@ body {
     padding: 0px;
     font-size: 36px;
     font-weight: 300;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #fff;
     background: none;
     border: none;
@@ -674,29 +674,69 @@ body {
     z-index: 15;
 }
 .modal-block {
-    width: 300px;
-    height: 250px;
-    background-color: white;
-    padding: 15px;
-    margin: 100px auto;
+    width: 350px;
+    /* height: 250px; */
+    background-color: rgb(255, 255, 255);
+    padding: 25px 40px 40px 40px;
+    margin: 200px auto;
+    color: #2c71b8;
+    font-size: 21px;
 }
 .form-call {
     position: relative;
-    padding-top: 30px;
+    padding-top: 40px;
     text-align: center;
+    width: 100%;
 }
 
 .form-call h3 {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
 .form-field {
     margin-bottom: 15px;
+    width: 100%;
+    border: 1px solid #2c71b8;
+    padding: 5px;
+}
+.form-field:hover {
+    outline: solid 2px #2c71b8;
+}
+
+.form-field input {
+    width: 100%;
+    font-size: 18px;
+    line-height: 30px;
+    border: none;
+    color: #2c71b8;
+}
+.form-field input::placeholder {
+    color: #2c71b8;
+}
+.form-field input:focus-within {
+    outline: none;
+}
+
+.please-call {
+    margin-top: 10px;
+    color: white;
+    font-size: 18px;
+    line-height: 30px;
+    padding: 6px;
+    width: 100%;
+    border: 1px solid #2c71b8;
+    background-color: #2c71b8;
+    cursor: pointer;
+}
+
+.please-call:hover{
+    background-color: white;
+    color: #2c71b8;
 }
 
 .btn-close {
     position: absolute;
-    right: 10px;
+    right: 0px;
     top: 0px;
     cursor: pointer;
 }
@@ -705,10 +745,9 @@ body {
     display: block;
 }
 
-.hide{
+.hide {
     display: none;
 }
-
 
 .slider-content > div {
     font-size: 100px;
@@ -746,7 +785,7 @@ body {
 .slick-prev:before {
     background: center / 100% no-repeat url(img/arrow-back-slider.png);
 }
-.slick-next:before{
+.slick-next:before {
     background: center / 100% no-repeat url(img/arrow-forward-slider.png);
 }
 
@@ -777,12 +816,10 @@ body {
     background-color: white;
 }
 
-
 .slick-dots li button:hover,
 .slick-dots li button:focus {
     background-color: white;
 }
-
 
 .product-quantity {
     margin-bottom: 15px;
@@ -795,7 +832,7 @@ body {
 }
 
 .product-quantity input {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     text-align: center;
     width: calc(100% - 30px - 100px);
     border: 1px solid white;
@@ -808,7 +845,7 @@ body {
     outline: none;
 }
 
-.product-quantity [class*="-btn"]{
+.product-quantity [class*="-btn"] {
     border: 1px solid white;
     background: none;
     color: white;
@@ -822,8 +859,8 @@ body {
 .product-quantity [class*="-btn"]:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
-.product-quantity [class*="-btn"]:disabled{
+.product-quantity [class*="-btn"]:disabled {
     opacity: 0.5;
     background: none;
-    cursor:auto;
+    cursor: auto;
 }
